Thu Sep  6 08:20:55 2012  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*: Imported minitest 3.4.0 (r7762)
	* test/minitest/*: ditto

Wed Sep  5 19:20:53 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* parse.y (rb_warn4S): renamed from rb_warn4(), because the case in
	  r36911 takes a string.

	* parse.y (rb_warn4S): use ripper_warnS() for ripper.

	* parse.y (ripper_warnS): now it is used.

Wed Sep  5 15:51:52 2012  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* .travis.yml (notifications): [experimental] update notification
	  template.

Wed Sep  5 15:21:12 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (rb_warn4): added as a rb_warn variant to warn with explicit
	  source file name and line in parse.y.

	* parse.y (warn_unused_var): use rb_warn4 to suppress warning on ripper.

Wed Sep  5 13:30:04 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_make_pattern): names under recursive need to be single
	  basenames to match for each name.  [ruby-core:47418] [Bug #6977]

Tue Sep  4 20:55:17 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* test/ruby/envutil.rb (EnvUtil#invoke_ruby): show Timeout::Error
	  instead of IOError if the timeout has expired.

	* test/test_pstore.rb
	  (PStoreTest#test_pstore_files_are_accessed_as_binary_files):
	  increase timeout because this test is slow on Windows.
	  [ruby-core:47402] [Bug #6965]

Tue Sep  4 11:28:57 2012  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm_eval.c (ruby_eval_string_from_file_protect): initializer
	  element is not computable at load time.

Tue Sep  4 07:48:35 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_asn1_rb:
	  test/openssl/test_ssl_session.rb:
	  test/openssl/test_x509name.rb:
	  test/openssl/test_buffering.rb:
	  test/openssl/test_x509cert.rb:
	  test/openssl/test_ssl.rb: Refactor code that leads to warnings on
	  Ruby CI.

Tue Sep  4 07:02:56 2012  Martin Bosslet  <Martin.Bosslet@googlemail.com>
